# rf-benchmark-hub

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  submission.yml  task_proposal.yml
.github/workflows/: build-leaderboard.yml  ci.yml  validate-submission.yml
configs/: config.yaml
configs/regime/: few_shot.yaml  from_scratch.yaml  full_finetune.yaml  linear_probe.yaml
configs/task/: amc.yaml  interference_id.yaml  protocol_tech_id.yaml  sei.yaml  snr_estimation.yaml  wideband_detection.yaml
docs/: ADDING_A_MODEL.md  ARCHITECTURE.md  BIBLIOGRAPHY.md  DOWNSTREAM_TASKS.md  EVALUATION_PROTOCOL.md  IMPLEMENTATION_PLAN.md  LICENSES.md  NEXT_STEPS.md  SOTA_REFERENCE.md  SUBMISSION.md
leaderboard/: tasks.json
leaderboard/manifests/amc/: chance.json  cldnn.json  hoc_lr.json  majority_class.json  mcldnn.json  resnet_amc.json
leaderboard/manifests/interference_id/: interf_cnn.json
leaderboard/manifests/sei/: complex_cnn-closed_set.json  complex_cnn-cross_day.json  complex_cnn-cross_receiver.json  complex_cnn-open_set.json  resnet1d_sei-closed_set.json  resnet1d_sei-cross_day.json  resnet1d_sei-cross_receiver.json  resnet1d_sei-open_set.json  wisig_cnn_paper-cross_day.json  wisig_cnn_paper-cross_receiver.json  wisig_cnn_paper-open_set.json
leaderboard/manifests/snr_estimation/: mean_snr.json  snr_cnn.json  snr_moment_ridge.json
leaderboard/results/amc/: chance.json  cldnn.json  cldnn_paper.json  feat_paper-2018.json  gamc_paper-2016.json  hoc_lr.json  iqfm-base-linear_probe.json  iqfm_paper.json  lstm2_paper-2018.json  lstm2_paper.json  lstm_dae_paper-2018.json  lstm_dae_paper.json  lwm-spectro-linear_probe.json  majority_class.json  mcformer_paper.json  mcldnn-radioml2016-full_finetune.json  mcldnn-radioml2018.json  mcldnn-sig53-linear_probe.json  mcldnn.json  mcldnn_paper-2018.json  mcldnn_paper.json  moe_amc_paper-2018.json  moeformer_paper-2016.json  moeformer_paper-2018.json  resnet_amc.json  resnet_paper-2018.json  tcn_gru_paper.json  tldnn_paper-2018.json  tldnn_paper.json  vtcnn2_paper.json  wirelessjepa_paper.json  xcit-nano-sig53-linear_probe.json
leaderboard/results/interference_id/: interf_cnn.json  wirelessjepa_paper.json
leaderboard/results/protocol_tech_id/: tprime.json  tprime_crossroom.json  tprime_paper.json  wirelessjepa_paper.json
leaderboard/results/sei/: complex_cnn-closed_set.json  complex_cnn-cross_day.json  complex_cnn-cross_receiver.json  complex_cnn-open_set.json  iqfm-cross_receiver-linear_probe.json  iqfm_paper-powder.json  oracle_cnn_paper-closed_set.json  powder_cnn_paper-closed_set.json  powder_cnn_paper-cross_day.json  powder_triplet_paper-cross_day.json  pvamu_cnn_paper-closed_set.json  resnet1d_sei-closed_set.json  resnet1d_sei-cross_day.json  resnet1d_sei-cross_receiver.json  resnet1d_sei-open_set.json  sinformer_paper-closed_set.json  wirelessjepa_paper-powder.json  wisig-cnn-closed_set-from_scratch.json  wisig_cnn_paper-closed_set.json  wisig_cnn_paper-cross_day.json  wisig_cnn_paper-cross_receiver.json  wisig_cnn_paper-open_set.json  wisig_manytx_paper-closed_set.json
leaderboard/results/snr_estimation/: mean_snr.json  snr_cnn.json  snr_moment_ridge.json
leaderboard/results/wideband_detection/: rt_detr_l_paper.json  yolov3_l_paper.json  yolov6_m_paper.json  yolov9_m_paper.json
leaderboard/site/: generate.py
leaderboard/splits/deepsense/: sensing-deepsense-official-v1.idx.json  sensing-deepsense-official-v1.manifest.json
leaderboard/splits/interf_gnss6/: interf-gnss6-8010-seed42-v1.idx.json  interf-gnss6-8010-seed42-v1.manifest.json
leaderboard/splits/lora/: sei-lora-closedset-strat-dev-8010-seed42-v1.idx.json  (+1 more)
rfbench/: __init__.py  __main__.py  training.py  training_detection.py  training_sei.py  training_sensing.py  training_snr.py  verify.py
rfbench/cli/: __init__.py
rfbench/core/: __init__.py  dataset.py  evaluate.py  manifest.py  metric.py  model.py  registry.py  splits.py  task.py  types.py
rfbench/regimes/: __init__.py  base.py  few_shot.py  heads.py  passthrough.py  probe.py
schemas/: result.schema.json  submission.schema.json
schemas/examples/: result.invalid.json  result.valid.json  submission.valid.json
scripts/: aggregate_multiseed.py  backfill_uncertainty.py  compute_model_sizes.py
scripts/pretrain/: iqfm_simclr.py  wireless_jepa.py
slurm/: README.md  compute_model_sizes_arm.sh  diagnose_cldnn.py  diagnose_cldnn_arm.sh  download_prepare_arm.sh  eval_fm_arm.sh  eval_fm_episodic.py  interference_id_e2e_arm.sh  prepare_arm.sh  prepare_openset_sei.sh  prepare_sei_arm.sh  pretrain_iqfm_arm.sh  pretrain_wireless_jepa_arm.sh  probe_torchsig_api_arm.sh  probe_torchsig_arm.sh  protocol_tech_id_e2e_arm.sh  retrain_cldnn_arm.sh  setup_and_test_arm.sh  setup_gpu_venv.sh  train_baseline_arm.sh  train_hoc_amc.sh  train_raddet_detection.py  train_raddet_detection_arm.sh  train_sei_arm.sh  train_sei_multiseed_arm.sh  train_sensing_arm.sh  train_snr_baselines.sh  train_snr_cnn_arm.sh  train_tldnn.py  train_tldnn_arm.sh
tests/: test_aggregate_multiseed.py  test_backfill_uncertainty.py  test_ci_workflows.py  test_cldnn.py  test_cli.py  test_complex_cnn.py  test_contracts.py  test_data_amc.py  test_data_detection.py  test_data_sei.py  test_deepsense_cnn.py  test_evaluate.py  test_foundation.py  test_foundation_fm.py  test_hoc_amc.py  test_interf_cnn.py  test_iqfm.py  test_mcldnn.py  test_oracle_cnn.py  test_raddet_detector.py  test_regimes.py  test_repo_hygiene.py  test_resnet1d_sei.py  test_resnet_amc.py  test_schemas.py  test_sei_cnn.py  test_site.py  test_snr_regressors.py  test_spectrum_sensing.py  test_splits.py  test_task_amc.py  test_task_detection.py  test_task_interference_id.py  test_task_protocol_tech_id.py  test_task_sei.py  test_task_snr_estimation.py  test_tldnn.py  test_tprime.py  test_training.py  test_training_sei.py  (+5 more)
tools/: check_no_raw_data.py
(+98 files in other folders)
