[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfbench"
version = "0.1.0"
description = "RF-Benchmark-Hub: reproducible benchmarks + leaderboard harness for terrestrial RF ML tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "RF-Benchmark-Hub contributors" }]
# Runtime footprint deliberately minimal: only JSON-schema validation is needed for the frozen core
# (evaluate() emits + validates result.json). torch and heavy task/model deps live behind optional
# extras so `pip install rfbench` + schema/leaderboard/submit-check run on a CPU box with no DL stack.
# CLI uses stdlib argparse -> no click/typer dep.
dependencies = [
  "jsonschema>=4.21",   # Draft 2020-12 validator for result/submission schemas
]

[project.optional-dependencies]
torch = ["torch>=2.2", "numpy>=1.24"]
tasks = ["torchmetrics>=1.3", "scikit-learn>=1.3", "scipy>=1.11"]
configs = ["hydra-core>=1.3"]
dev = ["ruff>=0.5", "black>=24.4", "pytest>=8.0", "mypy>=1.10", "pre-commit>=3.7", "types-jsonschema"]

[project.scripts]
rfbench = "rfbench.cli:main"

[project.urls]
Homepage = "https://github.com/rf-benchmark-hub/rf-benchmark-hub"

[tool.hatch.build.targets.wheel]
packages = ["rfbench"]        # package at repo ROOT, NOT src/
# Ship the JSON schemas as package data so jsonschema resolves them at runtime (post-install, not just in-tree).
# (rfbench/data is now picked up by normal package discovery: .gitignore anchors `/data/` to the repo root.)
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "rfbench/_schemas"

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ANN"]   # incl. isort (I) + pycodestyle-warnings (W) + flake8-annotations (ANN) for "fully typed"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true   # torch/hydra stubs optional in the light install
disallow_untyped_defs = true
packages = ["rfbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
