[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfbench"
version = "0.1.0"
description = "RF-Benchmark-Hub: reproducible benchmarks + leaderboard harness for terrestrial RF ML tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "RF-Benchmark-Hub contributors" }]
# Runtime footprint deliberately minimal: only JSON-schema validation is needed for the frozen core
# (evaluate() emits + validates result.json). torch and heavy task/model deps live behind optional
# extras so `pip install rfbench` + schema/leaderboard/submit-check run on a CPU box with no DL stack.
# CLI uses stdlib argparse -> no click/typer dep.
dependencies = [
  "jsonschema>=4.21",   # Draft 2020-12 validator for result/submission schemas
]

[project.optional-dependencies]
torch = ["torch>=2.2", "numpy>=1.24"]
tasks = ["torchmetrics>=1.3", "scikit-learn>=1.3", "scipy>=1.11"]
configs = ["hydra-core>=1.3"]
# Data-layer deps: needed only to actually download/prepare real datasets (cluster ARM venv).
# Loaders import these lazily; unit tests exercise prepare() on pure-stdlib synthetic fixtures.
data = ["numpy>=1.24", "h5py>=3.10", "requests>=2.31"]
detection = ["torchsig", "torch>=2.2"]   # WBSig53 generation via TorchSig
# RadDet wideband-detection baseline (YOLOv3 / RT-DETR). Kept ISOLATED from the torchsig
# `detection` extra: RadDet is a real published YOLO-format dataset, trained/evaluated with
# ultralytics (pulls torch + numpy + opencv itself). Imported LAZILY by
# rfbench.models.baselines.raddet_detector / rfbench.training_detection, so the module tops
# stay dependency-free and unit-testable without a DL stack.
# faster-coco-eval: COCO-mAP backend required by torchmetrics MeanAveragePrecision at eval
# (aarch64 wheels, no compile); without it the detection-track mAP raises ModuleNotFoundError.
raddet = ["ultralytics>=8.1", "torch>=2.2", "numpy>=1.24", "torchmetrics>=1.3", "faster-coco-eval>=1.5"]
foundation = ["torch>=2.2", "huggingface_hub>=0.20", "numpy>=1.24"]  # public-weights FMs (LWM-Spectro)
dev = ["ruff>=0.5", "black>=24.4", "pytest>=8.0", "mypy>=1.10", "pre-commit>=3.7", "types-jsonschema", "pyyaml>=6.0", "types-pyyaml"]

[project.scripts]
rfbench = "rfbench.cli:main"

[project.urls]
Homepage = "https://github.com/crabedesneiges/rf-benchmark-hub"

[tool.hatch.build.targets.wheel]
packages = ["rfbench"]        # package at repo ROOT, NOT src/
# Ship the JSON schemas as package data so jsonschema resolves them at runtime (post-install, not just in-tree).
# (rfbench/data is now picked up by normal package discovery: .gitignore anchors `/data/` to the repo root.)
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "rfbench/_schemas"

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ANN"]   # incl. isort (I) + pycodestyle-warnings (W) + flake8-annotations (ANN) for "fully typed"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true   # torch/hydra stubs optional in the light install
disallow_untyped_defs = true
packages = ["rfbench"]

# Torch-dependent modules (baselines, training loop): in the dep-free dev/CI venv torch is
# absent, so `nn.Module` resolves to Any and strict subclassing/return-any checks fire
# spuriously. These modules are strictly type-checked on the GPU venv (torch present); here we
# relax only the torch-absence-induced rules so `mypy rfbench` stays green without torch.
[[tool.mypy.overrides]]
module = ["rfbench.models.baselines.*", "rfbench.training", "rfbench.training_sei"]
disallow_subclassing_any = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
